<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainingProject</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_startService">Start Service</string>
    <string name="button_stopService">Stop Service</string>
    <string name="button_broadcastIntent">Broadcast Intent</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_entry">Input Message</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>

</resources>
