<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.trainingproject.EntryActivity" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="500px"
        android:layout_height="150px"
        android:hint="@string/edit_message" />

    <Button
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:onClick="startService"
        android:text="@string/button_startService" />

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:onClick="stopService"
        android:text="@string/button_stopService" />

    <Button
        android:id="@+id/btnBroadcastIntent"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:onClick="broadcastIntent"
        android:text="@string/button_broadcastIntent" />

</LinearLayout>